--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -47,9 +50,12 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
+    "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.4.7",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4"
+    "tailwindcss": "^3.1.4",
+    "uuid": "^11.1.0",
+    "vite": "^6.3.5"
   }
 }
