--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "autoprefixer": "^10.4.7",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
+    "quagga": "^0.12.1",
     "tailwindcss": "^3.1.4",
     "uuid": "^11.1.0",
     "vite": "^6.3.5"
