--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "display_override": ["window-controls-overlay", "standalone"],
   "background_color": "#F7F5F3",
-  "theme_color": "#D2691E",
+  "theme_color": "#F7F5F3",
   "orientation": "portrait-primary",
   "scope": "/Bookish/",
   "icons": [
