--- a/manifest.json
+++ b/manifest.json
@@ -4,62 +4,41 @@
   "description": "Your personal reading companion with virtual pet",
   "start_url": "/Bookish/",
   "display": "standalone",
-  "display_override": ["window-controls-overlay", "standalone"],
   "background_color": "#F7F5F3",
   "theme_color": "#F7F5F3",
   "orientation": "portrait-primary",
   "scope": "/Bookish/",
   "icons": [
     {
-      "src": "/Bookish/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/Bookish/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/Bookish/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/Bookish/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/Bookish/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/Bookish/icons/icon-192x192.png",
+      "src": "public/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
     },
     {
-      "src": "/Bookish/icons/icon-384x384.png",
-      "sizes": "384x384",
+      "src": "public/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "maskable"
     },
     {
-      "src": "/Bookish/icons/icon-512x512.png",
+      "src": "public/manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
+    },
+    {
+      "src": "public/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
-  "categories": ["books", "education", "entertainment"],
+  "categories": [
+    "books",
+    "education",
+    "entertainment"
+  ],
   "lang": "en-US",
   "dir": "ltr"
 }
