--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "postcss": "^8.4.14",
     "quagga": "^0.12.1",
     "tailwindcss": "^3.1.4",
+    "toast": "^0.5.4",
     "uuid": "^11.1.0",
     "vite": "^6.3.5"
   }
